Update Java samples for 1.0.0-beta.1